test_suite/ERROR_return_mismatch.out
ERROR_return_mismatch.java: 11:  Semantic Error: The type: `int` of the return expression does not match the return type: `boolean` of method: `test`
