test_suite/ERROR_return_mismatch.java
// -unused -no-style
class Main {
  public static void main(String[] a) {}
}

class A {
  public boolean test() {
    int a;
    a = 1 + 2;
    return a;
  }
}
